unpackaged/main/default/objects/pro_HR_Doc__c/pro_HR_Doc__c.object-meta.xml
<CustomObject>
    <label>HR Document</label>
    <nameField>
        <label>HR Documents</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HR Documents</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>