unpackaged/main/default/objects/pro_HR_Doc__c/fields/pro_Doc_User_Type__c.field-meta.xml
<CustomField>
    <fullName>pro_Doc_User_Type__c</fullName>
    <label>User Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Administrator</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>