unpackaged/main/default/objects/pro_HR_Doc__c/fields/pro_HR_Doc_Description__c.field-meta.xml
<CustomField>
    <fullName>pro_HR_Doc_Description__c</fullName>
    <description>AB - Prodigy 12/6/2023</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>