unpackaged/main/default/objects/pro_HR_Doc__c/fields/pro_Notify_Users_of_Update__c.field-meta.xml
<CustomField>
    <fullName>pro_Notify_Users_of_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>AB 04/08/2023 - Created by Prodigy</description>
    <label>Notify Users of Update</label>
    <type>Checkbox</type>
</CustomField>