unpackaged/main/default/objects/pro_HR_Doc__c/recordTypes/pro_Essential_Documents.recordType-meta.xml
<RecordType>
    <fullName>pro_Essential_Documents</fullName>
    <active>true</active>
    <label>Essential Documents</label>
</RecordType>