unpackaged/main/default/objects/pro_HR_Doc__c/recordTypes/pro_General_Documents.recordType-meta.xml
<RecordType>
    <fullName>pro_General_Documents</fullName>
    <active>true</active>
    <label>General Documents</label>
</RecordType>